jupyterhub/jupyter-service.yml
apiVersion: v1
kind: Service
metadata:
  name: jupyter
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
  - IPv4
  ipFamilyPolicy: SingleStack
  ports:
  - port: 80
    protocol: TCP
    targetPort: 8000
  selector:
    app: jupyter
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
