jupyterhub/jupyter-route.yml
---
kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: jupyter
spec:
  to:
    kind: Service
    name: jupyter
    weight: 100
  port:
    targetPort: 8000
  tls:
    termination: edge
  wildcardPolicy: None
